@@ -132,7 +132,6 @@ public class LnService implements LNEditor {
     @Override
     public List<SclReportItem> getDOAndDAInstances(TAnyLN tAnyLN, DataAttributeRef dataAttributeRef) {
         List<SclReportItem> sclReportItems = new ArrayList<>();
-        log.info(":: start ::");
         return tAnyLN.getDOI().stream().filter(doi -> dataAttributeRef.getDoName().getName().equals(doi.getName()))
                 .findFirst()
                 .map(doi -> {
@@ -151,22 +150,18 @@ public class LnService implements LNEditor {
                                 .findFirst()
                                 .map(lastDsi -> {
                                     if (structNamesList.size() == 1) {
-                                        Optional<TDAI> tdai = lastDsi.getSDIOrDAI().stream()
+                                        lastDsi.getSDIOrDAI().stream()
                                                 .filter(dai -> dai.getClass().equals(TDAI.class))
                                                 .map(TDAI.class::cast)
                                                 .filter(dai -> dai.getName().equals(structNamesList.get(0)))
-                                                .findFirst();
-                                        if(tdai.isPresent()){
-                                            log.info(":: DAI FOUND struct case ::");
-                                            checkAndCompleteDataAttribute(tdai.get(), dataAttributeRef.getDaName());
-                                            return sclReportItems;
-                                        }
-                                        log.warn("Missing DAI.name=({}) not found in SDI.name=({})",
-                                                structNamesList.get(0), lastDsi.getName());
-                                        sclReportItems.add(SclReportItem.error(null,
-                                                String.format("DAI.name=(%s) not found in SDI.name=(%s)",
-                                                        structNamesList.get(0), lastDsi.getName())));
-                                        return sclReportItems;
+                                                .findFirst()
+                                                .ifPresentOrElse(tdai1 -> checkAndCompleteDataAttribute(tdai1, dataAttributeRef.getDaName()), ()-> {
+                                                    log.warn("Missing DAI.name=({}) not found in SDI.name=({})",
+                                                            structNamesList.get(0), lastDsi.getName());
+                                                    sclReportItems.add(SclReportItem.error(null,
+                                                            String.format("DAI.name=(%s) not found in SDI.name=(%s)",
+                                                                    structNamesList.get(0), lastDsi.getName())));
+                                                });
                                     }
                                     log.warn("Missing DataAttributes in SDI.name=({})", lastDsi.getName());
                                     sclReportItems.add(SclReportItem.error(null,
@@ -182,25 +177,23 @@ public class LnService implements LNEditor {
                                     return sclReportItems;
                                 });
                     } else if(structNamesList.size() == 1){
-                        Optional<TDAI> tdai =  doi.getSDIOrDAI().stream()
+                        doi.getSDIOrDAI().stream()
                                 .filter(unNaming -> unNaming.getClass().equals(TDAI.class))
                                 .map(TDAI.class::cast)
                                 .filter(dai -> dai.getName().equals(structNamesList.get(0)))
-                                .findFirst();
-                        if(tdai.isPresent()){
-                            log.info(":: DAI FOUND sample case ::");
-                            checkAndCompleteDataAttribute(tdai.get(), dataAttributeRef.getDaName());
-                        } else {
-                            log.warn("Missing DAI.name=({}) not found in DOI.name=({})", structNamesList.get(0), doi.getName());
-                            sclReportItems.add(SclReportItem.error(null,
-                                    String.format("DAI.name=(%s) not found in DOI.name=(%s)", structNamesList.get(0), doi.getName())));
-                        }
+                                .findFirst()
+                                .ifPresentOrElse(
+                                        dai ->  checkAndCompleteDataAttribute(dai, dataAttributeRef.getDaName()),
+                                        () -> {
+                                            log.warn("Missing DAI.name=({}) not found in DOI.name=({})", structNamesList.get(0), doi.getName());
+                                            sclReportItems.add(SclReportItem.error(null,
+                                                    String.format("DAI.name=(%s) not found in DOI.name=(%s)", structNamesList.get(0), doi.getName())));
+                                        });
                         return sclReportItems;
                     }
                     return sclReportItems;
                 })
                 .orElseGet(() -> {
-                    //error
                     log.warn("DOI.name=({}) not found in LN.type=({})", dataAttributeRef.getDoName(), tAnyLN.getLnType());
                     sclReportItems.add(SclReportItem.error(null,String.format("DOI.name=(%s) not found in LN.type=(%s)",
                             dataAttributeRef.getDoName(), tAnyLN.getLnType())));
@@ -214,14 +207,12 @@ public class LnService implements LNEditor {
             boolean isGroup = hasSgGroup(tdai);
             if (isGroup) {
                 daTypeName.setValImport((!tdai.isSetValImport() || tdai.isValImport())
-                //        && iedHasConfSG()
+                        // TODO && iedHasConfSG()
                 );
             } else {
                 daTypeName.setValImport(false);
+                // TODO
                 log.warn("Inconsistency in the SCD file - DAI ?? with fc=?? must have a sGroup attribute");
-//                log.warn("Inconsistency in the SCD file - DAI {} with fc={} must have a sGroup attribute",
-//                        dataAttributeRef.getObjRef(getParentIed().getName(), parentAdapter.getInst()),
-//                        dataAttributeRef.getDaName().getFc());
             }
         } else if (tdai.isSetValImport()) {
             daTypeName.setValImport(tdai.isValImport());
@@ -232,6 +223,7 @@ public class LnService implements LNEditor {
         return tdai.getVal().stream().anyMatch(tVal -> tVal.isSetSGroup() && tVal.getSGroup() > 0);
     }
 
+    // TODO
     public boolean iedHasConfSG(TIED tied, TLDevice tlDevice) {
         TAccessPoint accessPoint = tied.getAccessPoint().stream()
                 .filter(tAccessPoint ->
@@ -265,64 +257,47 @@ public class LnService implements LNEditor {
                 .orElse(tsdi);
     }
 
-    private TSDI findOrCreateSDIByStructName(TSDI tsdi, List<String> structNames) {
-        structNames.remove(0);
-        if(structNames.isEmpty() || structNames.size() == 1) return tsdi;
-        return findOrCreateSDIByStructName(findOrCreateSDIFromSDI(tsdi, structNames.get(0)), structNames);
-    }
-
     private Optional<TDAI> createDoiSdiDaiChainIfNotExists(TAnyLN tAnyLN, DoTypeName doTypeName, DaTypeName daTypeName) {
-        LinkedList<String> structNamesList = new LinkedList<>();
-        structNamesList.addLast(doTypeName.getName());
-        doTypeName.getStructNames().forEach(structNamesList::addLast);
-        structNamesList.addLast(daTypeName.getName());
-        daTypeName.getStructNames().forEach(structNamesList::addLast);
-
-        String doiName = structNamesList.remove();
-        TDOI doi = tAnyLN.getDOI().stream().filter(tdoi -> tdoi.getName().equals(doiName))
+        LinkedList<String> structInstances = new LinkedList<>(doTypeName.getStructNames());
+        structInstances.addLast(daTypeName.getName());
+        daTypeName.getStructNames().forEach(structInstances::addLast);
+        tAnyLN.getDOI().stream().filter(doi1 -> doi1.getName().equals(doTypeName.getName()))
                 .findFirst()
-                .orElseGet(() -> {
-                    TDOI tdoi = new TDOI();
-                    tdoi.setName(doiName);
-                    tAnyLN.getDOI().add(tdoi);
-                    return tdoi;
+                .ifPresentOrElse(tdoi -> {
+                    System.out.println("present");
+                }, ()-> {
+                    System.out.println("not present");
+                    TDOI newDOI = new TDOI();
+                    newDOI.setName(doTypeName.getName());
+                    tAnyLN.getDOI().add(newDOI);
                 });
-        if(structNamesList.size() > 1) {
-            TSDI lastDsi = findOrCreateSDIByStructName(findOrCreateSDIFromDOI(doi, structNamesList.get(0)), structNamesList);
-            if (structNamesList.size() == 1) {
-                return Optional.of(findOrCreateDAIFromSDI(lastDsi, structNamesList.get(0)));
+        TDOI doi = tAnyLN.getDOI().stream().filter(doi1 -> doi1.getName().equals(doTypeName.getName()))
+                .findFirst().get();
+        if(structInstances.size() > 1){
+            TSDI firstSDI = findOrCreateSDIFromDOI(doi, structInstances.getFirst());
+            TSDI lastSDI = findOrCreateSDIByStructName(firstSDI, structInstances);
+            if(structInstances.size() == 1){
+                TDAI newDAI = new TDAI();
+                newDAI.setName(structInstances.getFirst());
+                lastSDI.getSDIOrDAI().add(newDAI);
+//                tAnyLN.getDOI().add(doi);
+                return Optional.of(newDAI);
             }
-        }
-        else if(structNamesList.size() == 1){
-            return Optional.of(doi.getSDIOrDAI().stream()
-                    .filter(dai -> dai.getClass().equals(TDAI.class))
-                    .map(TDAI.class::cast)
-                    .filter(tdai -> tdai.getName().equals(structNamesList.get(0)))
-                    .findFirst()
-                    .orElseGet(() -> {
-                        TDAI tdai = new TDAI();
-                        tdai.setName(structNamesList.get(0));
-                        doi.getSDIOrDAI().add(tdai);
-                        return tdai;
-                    }));
+        } else if(structInstances.size() == 1){
+            TDAI newDAI = new TDAI();
+            newDAI.setName(structInstances.getFirst());
+            doi.getSDIOrDAI().add(newDAI);
+//            tAnyLN.getDOI().add(doi);
+            return Optional.of(newDAI);
         }
         return Optional.empty();
     }
 
-    private TDAI findOrCreateDAIFromSDI(TSDI sdi, String daiName) {
-        return sdi.getSDIOrDAI().stream()
-                .filter(unNaming -> unNaming.getClass().equals(TDAI.class))
-                .map(TDAI.class::cast)
-                .filter(tdai -> tdai.getName().equals(daiName))
-                .findFirst()
-                .orElseGet(() -> {
-                    TDAI tdai = new TDAI();
-                    tdai.setName(daiName);
-                    sdi.getSDIOrDAI().add(tdai);
-                    return tdai;
-                });
+    private TSDI findOrCreateSDIByStructName(TSDI tsdi, LinkedList<String> structNames) {
+        structNames.remove();
+        if(structNames.isEmpty() || structNames.size() == 1) return tsdi;
+        return findOrCreateSDIByStructName(findOrCreateSDIFromSDI(tsdi, structNames.getFirst()), structNames);
     }
-
 
     private TSDI findOrCreateSDIFromDOI(TDOI doi, String sdiName) {
         return doi.getSDIOrDAI().stream()
